# kaggle-orbit-wars

./: .gitignore  pyproject.toml
src/: README.md  __init__.py  agent.py  arena.py  diag.py  eval.py  features.py  garrison.py  gate.py  kaggle_replay.py  ladder.py  rating.py  replay.py  stats.py  utils.py  viz.py  worldmodel.py
src/agents/: __init__.py  flow_value.py  flow_value_abl.py  flow_value_cfg.py  flow_value_def.py  flow_value_dr.py  flow_value_fs.py  flow_value_ia.py  flow_value_xa.py  lookahead.py  mcts.py  mcts_om.py  missions.py  producer_lite.py  producer_open.py  producer_port.py  producer_solver.py  roi_defense.py  roi_greedy.py  roi_greedy_predict.py  roi_ledger.py
src/opponents/: __init__.py  boss.py  defender.py  lb1200.py  lb1224.py  nearest_sniper.py  producer.py  production_first.py  random_play.py  weakest_first.py
src/tests/: test_agent.py  test_arena.py  test_diag.py  test_flow_value.py  test_flow_value_ag15.py  test_flow_value_cfg.py  test_flow_value_ia.py  test_flow_value_xa.py  test_garrison.py  test_kaggle_replay.py  test_ladder.py  test_lookahead.py  test_mcts.py  test_mcts_om.py  test_missions.py  test_opponents_sota.py  test_opponents_strong.py  test_producer_lite.py  test_producer_open.py  test_producer_port.py  test_producer_solver.py  test_rating.py  test_replay.py  test_roi_defense.py  test_roi_greedy.py  test_roi_greedy_predict.py  test_roi_ledger.py  test_utils_aim.py  test_utils_constants.py  test_utils_physics.py  test_worldmodel.py
tools/: build_submission.py  build_submission_bundle.py
